/** Defines messages for a service provided in Python that exposes
    HDL-to-edgir elaboration for a compiler in a different process / language.

*/

syntax = "proto3";
package edgrpc.hdl;

import "edgir/schema.proto";
import "edgir/ref.proto";
import "edgir/elem.proto";
import "edgir/lit.proto";


message ModuleName {
  string name = 1;
}

message LibraryRequest {
  edgir.ref.LibraryPath element = 2;  // library element asked for
}

message GeneratorRequest {
  edgir.ref.LibraryPath element = 2;  // path of library element containing the generator
  string fn = 3;  // name of generator function

  message Value {
    edgir.ref.LocalPath path = 1;
    edgir.lit.ValueLit value = 2;
  }

  repeated Value values = 4;
}

message Refinements {
  message Subclass {
    oneof source {
      edgir.ref.LocalPath path = 1;
      edgir.ref.LibraryPath cls = 2;
    }
    edgir.ref.LibraryPath replacement = 3;
  }
  message Value {
    message ClassParamPath {
      edgir.ref.LibraryPath cls = 1;
      edgir.ref.LocalPath param_path = 2;
    }
    oneof source {
      edgir.ref.LocalPath path = 1;
      ClassParamPath cls_param = 2;
    }
    edgir.lit.ValueLit value = 3;
  }
  repeated Subclass subclasses = 1;
  repeated Value values = 2;
}

message IndexResponse {
  repeated edgir.ref.LibraryPath indexed = 1;
}

message LibraryResponse {
  oneof result {
    edgir.schema.Library.NS.Val element = 1;
    string error = 2;  // TODO source locators
  }
  Refinements refinements = 3;  // only valid if element is a top-level block, and not error
}

message GeneratorResponse {
  oneof result {
    edgir.elem.HierarchyBlock generated = 1;
    string error = 2;  // TODO source locators
  }
}

message HdlRequest {
  oneof request {
    ModuleName index_module = 1;  // returns an index of IR elements in a Python module
    LibraryRequest get_library_element = 2;  // returns the IR for a library element
    GeneratorRequest elaborate_generator = 3;  // returns the elaborated IR
  }
}

message HdlResponse {
  oneof response {
    IndexResponse index_module = 1;  // list of contained library elements
    LibraryResponse get_library_element = 2;
    GeneratorResponse elaborate_generator = 3;
  }
}
